<resources>
    <string name="app_name">BiciMap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BiciMap</string>
    <string name="nav_header_subtitle">user@bicimap.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="buscar">Buscar</string>
    <string name="conectar">Conectar</string>
    <string name="start">Comenzar recorrido</string>
    <string name="finish">Finalizar recorrido</string>
    <string name="finish2">Recorrido finalizado</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Titulo_BT">Dispositivos encontrados</string>
    <string name="bluetooth">B</string>

    <!-- MENU-->
    <string name="usuario">Usuario</string>
    <string name="ajustes">Ajustes</string>
    <string name="fav">Favoritos</string>
    <string name="caminos">Mis rutas</string>
    <string name="contaminacion"> Mapa de contaminación</string>
    <string name="micontaminacion"> Mi mapa de contaminación</string>
    <string name="conexion">Conexión</string>
    <string name="perfil">Perfil</string>
    <string name="configuracion">Configuración</string>

    <!-- LOG IN-->
    <string name="user">Email</string>
    <string name="password">Contraseña</string>
    <string name="boton">Entrar</string>
    <string name="registro">¿Aún no estás registrado?</string>
    <string name="registro1">¡Registrate ahora!</string>
    <string name="sinregistro">No deseo registrarme</string>

    <!-- SIGN UP-->
    <string name="reg_name">Nombre de usuario</string>
    <string name="reg_email">Email</string>
    <string name="new_account">Crear cuenta</string>
    <string name="back_to_main">¿Ya eres miembro? Login</string>
    <string name="titulo">BiciMap</string>
    <string name="password2">Confirma la contraseña</string>

    <!-- ProgressBar & Checkbox-->
    <string name="obras">Obras</string>
    <string name="trafico">Tráfico</string>
    <string name="humos">Humos</string>
    <string name="viento">Viento</string>
    <string name="lluvia">Lluvia</string>
    <string name="otros">Otros</string>
    <string name="pm_inicial">0</string>
    <string name="cruce">Cruce</string>
    <string name="semaforo">Semáforo</string>
    <string name="vegetacion">Vegetación</string>

    <string name="pregunta">¿Qué ves por el camino?</string>
    <string name="ambiente">Ambiente</string>
    <string name="via">Vía pública</string>
    <string name="clima">Clima</string>
    <string name="olor">Olores</string>
    <string name="speed">Velocidad:</string>
    <string name="speed1">0</string>
    <string name="speed2">m/s</string>

    <!-- MapBox-->
    <string name="mapbox_access_token">pk.eyJ1IjoiYW5kcmVhcG05NiIsImEiOiJjanU4MnY4a3kweHN1NDRtc2JzZmp0N3lkIn0.JZOC52Q_ZO2g5phVTMkpvg</string>
    <string name="user_location_permission_explanation">Para el correcto funcionamiento de BiciMAP es necesario el permiso de Localización.</string>
    <string name="user_location_permission_not_granted">Permiso denegado.</string>


</resources>
